# game_of_squares

./: .gitignore  Cargo.toml  README.md  build.rs  game_of_squares-398421e9115e2eb9.js  game_of_squares-9875d205fee68c80.js  game_of_squares-c579c6e9aef8a202.js  index.html
.cargo/: config.toml
.github/workflows/: deploy-page.yaml
src/: main.rs
