[package]
name = "game_of_squares"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev.package."*"]
# opt-level = 3

[profile.release]
opt-level = 'z'
# lto = "thin"

[dependencies]
# bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy = { version = "0.11.2"}
bevy_embedded_assets = "0.8.0"
rand = "0.8.5"

[build-dependencies]
embed-resource = "2.3"
